css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}
body {
	line-height: 1;
}
ol,
ul {
	list-style: none;
}
blockquote,
q {
	quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
	box-sizing: border-box;
}

html,
body {
	height: 100%;
	font-family: 'Titillium Web', sans-serif;
}

h1,
h2,
h3,
h4,
h5 {
	font-family: 'Bangers', cursive;
	letter-spacing: 1px;
	margin-bottom: 15px;
}

.container {
	width: 880px;
	margin: 0 auto;
	padding: 20px 1.25%;
}

header {
	display: flex;
	align-items: center;
	margin-top: 28px;
}

header nav {
	width: 100%;
	display: flex;
	justify-content: space-around;
	margin-top: 28px;
}

header nav a {
	font-size: 14px;
	color: gray;
	text-decoration: none;
}

header nav a:hover {
	text-decoration: underline;
}

header .logo {
	margin-top: 25px;
}

.cta {
	width: 100%;
	display: flex;
	justify-content: center;
}

.cta .cta-text {
	/* display: inline-block; */
	vertical-align: top;
	font-size: 77px;
	margin-top: 120px;
	text-align: center;
	padding: 0px 75px;
}

.cta .cta-text button {
	background: white;
	vertical-align: top;
	margin-top: 6px;
	padding: 8px 44px;
	font-size: 17px;
	border: 1px solid black;
	cursor: pointer;
}

.cta .cta-text button:hover {
	background: black;
	color: white;
}

.cta img {
	/* display: inline-block; */
	margin-top: 69px;
}

.main-content {
	width: 100%;
	border-top: 1px solid black;
	margin-top: 76px;
	padding-top: 39px;
}

.main-content .top-content {
	display: flex;
	justify-content: space-between;
	padding: 0 10px;
}

.main-content .top-content .text-content {
	width: 100%;
}

.main-content .top-content .text-content:last-child {
	/* margin-right: 0; */
}

.main-content .middle-img {
	width: 100%;
	margin-top: 45px;
}

.main-content .bottom-content {
	margin-top: 37px;
	padding: 0 10px;
	display: flex;
	justify-content: space-between;
}

.main-content .bottom-content .text-content {
	width: 100%;
	/* display: inline-block; */
	/* margin-right: 12px; */
}

.main-content .bottom-content .text-content:last-child {
	/* margin-right: 0; */
}

.contact {
	margin-top: 57px;
	border-top: 1px solid black;
	padding: 39px 10px 0;
}

.contact p {
	margin: 20px 0;
}

footer {
	margin: 32px 0;
	text-align: center;
	font-size: 14px;
}

/* Responsive Media Queries */

@media (max-width: 800px) {
	.container {
		width: 600px;
	}
	.cta {
		align-items: center;
	}
	.cta img {
		display: none;
	}
	header {
		flex-direction: column-reverse;
	}
	header .nav {
		/* width: 100%; */
	}
}

@media (max-width: 500px) {
	.container {
		width: 500px;
	}
	nav {
		flex-direction: column;
	}
	nav a {
		border-bottom: 1px solid grey;
		padding: 20px;
		/* width: 100%; */
		align-items: center;
	}
	.text-content {
		margin-bottom: 20px;
	}
	.main-content .top-content {
		flex-direction: column;
	}
	.main-content .bottom-content {
		flex-direction: column;
	}
}

